<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">内涵段子</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">暂无更新</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">已无更多数据</string>
    <string name="title_activity_text">TextActivity</string>
    <string name="mian_tab_item_test">段子</string>
    <string name="main_tab_item_image">图片</string>
    <string name="main_tab_item_check">审核</string>
    <string name="main_tab_item_activity">活动</string>
    <string name="main_tab_item_my">我的</string>

</resources>
