<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <FrameLayout
        android:id="@+id/main_framelayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <RadioGroup
        android:id="@+id/main_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_tabbar"
        android:gravity="center"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/main_tab_item_text"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/main_tab_essay_bg"
            android:checked="true"
            android:text="@string/mian_tab_item_test" />

        <RadioButton
            android:id="@+id/main_tab_item_image"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/main_tab_image_bg"
            android:text="@string/main_tab_item_image" />

        <RadioButton
            android:id="@+id/main_tab_item_check"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/main_tab_check_bg"
            android:text="@string/main_tab_item_check" />

        <RadioButton
            android:id="@+id/main_tab_item_active"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/main_tab_huodong_bg"
            android:text="@string/main_tab_item_activity" />

        <RadioButton
            android:id="@+id/main_tab_item_mine"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/main_tab_my_bg"
            android:text="@string/main_tab_item_my" />
    </RadioGroup>

</LinearLayout>